--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,47 @@
-# Krux' python repo
---extra-index-url https://staticfiles.krxd.net/foss/pypi/
+# Krux' standard library, which this is built on
+krux-stdlib==3.2.0
 
 # Krux-boto library which this is built on
-krux-boto==1.2.0
+krux-boto==1.5.6
+boto==2.49.0
+boto3==1.9.150
+botocore==1.12.150
 
 # For decorators
-decorator==4.0.10
+decorator==4.4.0
 
 # For Python 3 compatibility
-six==1.10.0
+six==1.12.0; python_version > '3.0'
+futures==3.2.0; python_version < '3.0'
+
 
 # Transitive libraries
 # This is needed so there are no version conflicts when
 # one downstream library does NOT specify the version it wants,
 # and another one does.
 
-# From krux-boto
-krux-stdlib==2.4.0
-boto==2.42.0
-boto3==1.4.0
 enum34==1.1.6
 pystache==0.5.4
-Sphinx==1.4.6
-kruxstatsd==0.3.0
-argparse==1.4.0
-tornado==3.0.1
-simplejson==3.8.2
-GitPython==2.0.8
+Sphinx==1.8.5
+kruxstatsd==0.4.0
+argparse==1.4.0; python_version > '3.0'
+tornado==5.1.1
+simplejson==3.16.0
+GitPython==2.1.11
 lockfile==0.12.2
-subprocess32==3.2.7
-Jinja2==2.8
-MarkupSafe==0.23
-Pygments==2.1.3
-alabaster==0.7.9
-babel==2.3.4
-docutils==0.12
-imagesize==0.7.1
-pytz==2016.6.1
+subprocess32==3.5.4
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+Pygments==2.4.2
+alabaster==0.7.12
+babel==2.7.0
+docutils==0.14
+imagesize==1.1.0
+pytz==2019.1
 snowballstemmer==1.2.1
-statsd==3.2.1
+statsd==3.3.0
 gitdb==0.6.4
 smmap==0.9.0
-botocore==1.4.58
-futures==3.0.5
-jmespath==0.9.0
-python-dateutil==2.5.3
-s3transfer==0.1.5
+jmespath==0.9.4
+python-dateutil==2.8.0
+s3transfer==0.2.1
