--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ verify_ssl = true
 name = "kruxfoss"
 
 [[source]]
-url = "https://${ARTIFACTORY_USER}:${ARTIFACTORY_PASSWORD}@kruxmvn.jfrog.io/artifactory/api/pypi/pypi/simple"
+url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
@@ -19,6 +19,6 @@ nose = "==1.3.7"
 
 [packages]
 krux-stdlib = {version="==4.0.1", index="kruxprop"}
-krux-boto = {version="==1.7.1", index="kruxprop"}
+krux-boto = {version="==1.7.2", index="kruxfoss"}
 decorator = {version="==4.4.1"}
 six = {version="*"}
